syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.example.grpc";
option java_outer_classname = "HealthServiceProto";

package healthservice;

service HealthService {
  rpc CreateMedicalRecord (CreateMedicalRecordRequest) returns (CreateMedicalRecordResponse);
}

message CreateMedicalRecordRequest {
  int64 childId = 1;
  string childName = 2;
  string childSurname = 3;
  string parentContact = 4;
}

message CreateMedicalRecordResponse {
  int64 id = 1;
  int64 childId = 2;
  bool success = 3;
  string message = 4;
}